fix sidebar scrollbar height

--- a/_sass/_sidebar.sass
+++ b/_sass/_sidebar.sass
@@ -10,7 +10,8 @@ $sidebar-width: 300px
     left: 0px
     display: inline-block
     width: $sidebar-width
-    padding: 41px 0px 0px 0px
+    margin: 41px 0px 0px 0px
+    padding: 1px 0px 0px 0px
     background: #626262
     overflow: auto
     transition: 0.6s ease all
